JWA-53 Implemented design for moderator and captain

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -40,8 +40,8 @@
     margin-bottom: 0;
 }
 
-.margin-right-big {
-    margin-right: 50px;
+.margin-left-small {
+    margin-left: 10px;
 }
 
 .width-match-parent {
